--- a/pages/projects/bennycake.html
+++ b/pages/projects/bennycake.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Thaís Santos | Projeto Benny Cake</title>
-        <link rel="stylesheet" href="./style.css">  
-        <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">  
-        <script defer src="./mobile-navbar.js"></script>
+        <link rel="stylesheet" href="../../style.css">  
+        <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">  
+        <script defer src="../../mobile-navbar.js"></script>
     </head>
     <body>
         <header>
@@ -19,11 +19,11 @@
                     <div class="line3"></div>
                 </div>
                 <ul class="nav-list" >
-                    <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="./img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
-                    <li><a href="./">Home</a></li>
-                    <li><a href="./pages/about.html">Sobre</a></li>
-                    <li><a href="./pages/services.html">Serviços</a></li>
-                    <li id="last"><a href="./pages/contato.html">Contato</a></li>
+                    <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="../../img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
+                    <li><a href="../.././">Home</a></li>
+                    <li><a href="../../pages/about.html">Sobre</a></li>
+                    <li><a href="../../pages/services.html">Serviços</a></li>
+                    <li id="last"><a href="../../pages/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </header>
@@ -38,9 +38,9 @@
                 </p>
          </div>
         <div class="row-projeto row-1">
-            <a href="./img/Enviar_para_Davi_porfolio/BennyCake/logobennycake-02.png" target="_blank"  class="port img-projeto"><img src="./img/benny.png" alt=""></a>
-            <a href="./img/Enviar_para_Davi_porfolio/BennyCake/CartaoBennyMockup.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/BennyCake/CartaoBennyMockup.png" alt=""></a>
-            <a href="./img/Enviar_para_Davi_porfolio/BennyCake/AdesivosBennyMockup.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/BennyCake/AdesivosBennyMockup.png" alt=""></a>
+            <a href="../../img/Enviar_para_Davi_porfolio/BennyCake/logobennycake-02.png" target="_blank"  class="port img-projeto"><img src="../../img/benny.png" alt=""></a>
+            <a href="../../img/Enviar_para_Davi_porfolio/BennyCake/CartaoBennyMockup.png" target="_blank" class="port img-projeto"><img src="../../img/Enviar_para_Davi_porfolio/BennyCake/CartaoBennyMockup.png" alt=""></a>
+            <a href="../../img/Enviar_para_Davi_porfolio/BennyCake/AdesivosBennyMockup.png" target="_blank" class="port img-projeto"><img src="../../img/Enviar_para_Davi_porfolio/BennyCake/AdesivosBennyMockup.png" alt=""></a>
         </div>
         
     </main>
