--- a/pages/projects/projeto-suraposa.html
+++ b/pages/projects/projeto-suraposa.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Thaís Santos | Projeto SuRaposa</title>
-        <link rel="stylesheet" href="./style.css">  
-        <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">  
-        <script defer src="./mobile-navbar.js"></script>
+        <link rel="stylesheet" href="../../style.css">  
+        <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">  
+        <script defer src="../../mobile-navbar.js"></script>
     </head>
     <body>
         <header>
@@ -19,11 +19,11 @@
                     <div class="line3"></div>
                 </div>
                 <ul class="nav-list" >
-                    <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="./img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
-                    <li><a href="./">Home</a></li>
-                    <li><a href="./pages/about.html">Sobre</a></li>
-                    <li><a href="./pages/services.html">Serviços</a></li>
-                    <li id="last"><a href="./pages/contato.html">Contato</a></li>
+                    <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="../../img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
+                    <li><a href="../.././">Home</a></li>
+                    <li><a href="../../pages/about.html">Sobre</a></li>
+                    <li><a href="../../pages/services.html">Serviços</a></li>
+                    <li id="last"><a href="../../pages/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </header>
@@ -36,10 +36,10 @@
             <p class="p-clique-aqui">Para visualização completa do manual de identidade visual em forma de revista virtual,<a href="https://www.flipsnack.com/7C6755FF8D6/manual-de-identidade-visual.html" target="_blank" class="a-projeto"> clique aqui.</a></p>
          </div>
         <div class="row-projeto row-1">
-            <a href="/img/Enviar_para_Davi_porfolio/SuRaposa/12-01.png" target="_blank"  class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/SuRaposa/12-01.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/SuRaposa/mockupcartaomelhor.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/SuRaposa/mockupcartaomelhor.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/SuRaposa/mockupmanual.png"  target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/SuRaposa/mockupmanual.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/SuRaposa/mockuptimbrado.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/SuRaposa/mockuptimbrado.png" alt=""></a>
+            <a href="../../img/Enviar_para_Davi_porfolio/SuRaposa/12-01.png" target="_blank"  class="port img-projeto"><img src="../../img/Enviar_para_Davi_porfolio/SuRaposa/12-01.png" alt=""></a>
+            <a href="../../img/Enviar_para_Davi_porfolio/SuRaposa/mockupcartaomelhor.png" target="_blank" class="port img-projeto"><img src="../../img/Enviar_para_Davi_porfolio/SuRaposa/mockupcartaomelhor.png" alt=""></a>
+            <a href="../../img/Enviar_para_Davi_porfolio/SuRaposa/mockupmanual.png"  target="_blank" class="port img-projeto"><img src="../../img/Enviar_para_Davi_porfolio/SuRaposa/mockupmanual.png" alt=""></a>
+            <a href="../../img/Enviar_para_Davi_porfolio/SuRaposa/mockuptimbrado.png" target="_blank" class="port img-projeto"><img src="../../img/Enviar_para_Davi_porfolio/SuRaposa/mockuptimbrado.png" alt=""></a>
         </div>
         
     </main>
