--- a/pages/projects/revista.html
+++ b/pages/projects/revista.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Thaís Santos | Projeto Revista</title>
-        <link rel="stylesheet" href=".style.css">  
-        <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">  
-        <script defer src=".mobile-navbar.js"></script>
+        <title>Thaís Santos | Revista</title>
+        <link rel="stylesheet" href="../../style.css">  
+        <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">  
+        <script defer src="../../mobile-navbar.js"></script>
     </head>
     <body>
         <header>
@@ -19,11 +19,11 @@
                     <div class="line3"></div>
                 </div>
                 <ul class="nav-list" >
-                    <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="./img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
-                    <li><a href="./">Home</a></li>
-                    <li><a href="./pages/about.html">Sobre</a></li>
-                    <li><a href="./pages/services.html">Serviços</a></li>
-                    <li id="last"><a href="./pages/contato.html">Contato</a></li>
+                    <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="../../img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
+                    <li><a href="../.././">Home</a></li>
+                    <li><a href="../../pages/about.html">Sobre</a></li>
+                    <li><a href="../../pages/services.html">Serviços</a></li>
+                    <li id="last"><a href="../../pages/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </header>
@@ -37,7 +37,7 @@
             <p class="p-clique-aqui"> Para visualização do projeto completo em forma de revista virtual, <a href="https://www.flipsnack.com/878AEE77C6F/revistaenchanted.html" target="_blank" class="a-projeto"> clique aqui.</a></p>
          </div>
         <div class="row row-projeto">
-            <a href="/img/Enviar_para_Davi_porfolio/Revista/mockup.png" target="_blank"  class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/Revista/mockup.png" alt=""></a>
+            <a href="../../img/Enviar_para_Davi_porfolio/Revista/mockup.png" target="_blank"  class="port img-projeto"><img src="../../img/Enviar_para_Davi_porfolio/Revista/mockup.png" alt=""></a>
         </div>
         
     </main>
